<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                style="@style/app_background"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/tv_hotel_logo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:layout_weight="2"
            android:text="@string/main_hotel_name_str"
            android:textColor="#f5f5f5"
            android:textSize="20sp"
            tools:text="微信生态酒店"/>

        <!--Banner入口-->
        <Button
            android:id="@+id/btn_hotel_introduce"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/select_verify_bg"
            android:text="@string/main_advervise_str"
            android:textColor="@color/main_color"
            android:textSize="20sp"
            tools:text="学院\n介绍"
            tools:visibility="visible"/>
        <!--身份认证按钮-->
        <View
            android:layout_width="20dp"
            android:layout_height="1px"/>

        <Button
            android:id="@+id/btn_identity_check"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/select_verify_bg"
            android:text="@string/main_identity_check_str"
            android:textColor="@color/main_color"
            android:textSize="20sp"
            tools:text="身份\n核验"
            tools:visibility="visible"/>

    </LinearLayout>


    <TextView
        android:id="@+id/tv_qr_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:text="@string/main_plz_scan_qr_code_str"
        android:textColor="@color/white"
        android:textSize="15sp"
        tools:drawableTop="@drawable/ic_launcher"
        tools:text="微信扫码，登记入住人信息后，点击下方按钮，领取房卡"/>

    <!--领卡入住按钮-->
    <LinearLayout
        android:id="@+id/ll_take_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_qr_code"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_take_card_bg">


        <Button
            android:id="@+id/btn_take_card"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:background="@drawable/select_card_bg"
            android:paddingBottom="15dp"
            android:paddingLeft="100dp"
            android:paddingRight="100dp"
            android:paddingTop="15dp"
            android:text="@string/main_check_in_str"
            android:textColor="@color/main_color"
            android:textSize="20sp"
            tools:text="领卡入住"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_take_card"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/main_notice_leave_back_card_str"
        android:textColor="@color/white"
        android:textSize="12sp"
        tools:text="温馨提示：离店时，可插卡退房"/>


    <TextView
        android:id="@+id/tv_app_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:lineSpacingExtra="2dp"
        android:textColor="#ffffff"
        android:textSize="13sp"
        tools:text="版本号：v2.4.10\n环境：TEST"/>


</RelativeLayout>
